--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/Quinncia/quinncia-frontend-assigment#readme",
   "dependencies": {
     "@babel/runtime": "^7.6.0",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.4",
@@ -31,8 +31,10 @@
     "randomstring": "^1.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^11.3.1",
     "react-hot-loader": "^4.12.12",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
